--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -178,8 +178,9 @@
             }
 
             .chat-msg__text--larger {
-                font-size: 2em;
+                font-size: 1.6em;
                 padding-top: 0.25em;
+                padding-bottom: 0.25em;
             }
 
             .chat-msg__media {
